--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,12 @@ crate-type = ["cdylib"]
 
 [dependencies.windows]
 version = "0.52.0"
-features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"]
+features = [
+    "Win32_UI_Input_KeyboardAndMouse",
+    "Win32_Foundation",
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_UI_Shell",
+]
 
 [dependencies.nexus-rs]
 git = "https://github.com/belst/raidcore_bindings-rs.git"
